deploy/kubernetes/web-deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-saml-demo-web # deployment.apps/sso-saml-demo-web
  labels:
    app: sso-saml-demo-web
spec:
  selector:
    matchLabels:
      app: sso-saml-demo-web
  template:
    metadata:
      labels:
        app: sso-saml-demo-web
    spec:
      containers:
        - name: web
          image: gcr.io/icalia-devops/rails-gci-saml-sso-demo:${THE_IMAGE_TAG_TO_USE}
          ports:
            - containerPort: 3000
          
          livenessProbe:
            httpGet: { path: / , port: 3000 }
            initialDelaySeconds: 10
            periodSeconds: 5
          
          readinessProbe:
            httpGet: { path: / , port: 3000 }
            initialDelaySeconds: 10
            periodSeconds: 5
