deploy/kubernetes/web-service-template.yml
apiVersion: v1
kind: Service
metadata:
  name: sso-saml-demo-web
  labels:
    app: sso-saml-demo-web
spec:
  selector:
    app: sso-saml-demo-web
  type: NodePort
  ports:
    - name: sso-saml-demo-web-port
      port: ${THE_PORT}
      targetPort: 3000
